# lumina

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build-and-test.yml
src/: code.rs  compile_pass.rs  compiler.rs  lib.rs  main.rs  object.rs
src/ast/: mod.rs  program.rs
src/ast/expression/: boolean_literal.rs  call_expression.rs  function_literal.rs  identifier.rs  if_expression.rs  infix.rs  integer_literal.rs  mod.rs  prefix.rs  string_literal.rs
src/ast/statement/: mod.rs  s_block.rs  s_let.rs  s_return.rs
src/code/: mod.rs
src/codegen/: function.rs  mod.rs  statement.rs
src/codegen/direct/: function.rs  mod.rs  statement.rs
src/codegen/expression/: block.rs  boolean.rs  ident.rs  if_else.rs  infix.rs  integer.rs  mod.rs
src/codegen/ir/: builder.rs  ctx.rs  function.rs  index.rs  (+2 more)
src/compiler/: function_manager.rs  mod.rs
src/core/: mod.rs  symbol.rs
src/ctx/: mod.rs  symbol_map.rs
src/hir/: function.rs  mod.rs  program.rs  statement.rs
src/interpreter/: environment.rs  error.rs  mod.rs  object.rs  return_value.rs
src/lexer/: mod.rs  source.rs
src/object/: mod.rs
src/parser/: mod.rs
src/repl/: mod.rs
src/repr/: mod.rs  token.rs  ty.rs
src/runtime/: environment.rs  mod.rs  object.rs
src/stage/: mod.rs
src/stages/: mod.rs
src/token/: mod.rs
src/ty/: error.rs  function.rs  mod.rs  ty_info.rs
src/util/: index.rs  mod.rs  multi_peek.rs  scope.rs  span.rs  symbol_map.rs
src/vm/: mod.rs
tests/: evaluation.rs  function.rs  let_statements.rs  programs.rs  return_statements.rs
tests/common/: mod.rs
(+233 files in other folders)
