[package]
name = "lumina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
int-enum = "1.0.1"
thiserror = "1.0.58"

[dev-dependencies]
rstest = "0.21.0"
