[package]
name = "lumina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
derive_more = "0.99.18"
index_vec = "0.1.3"
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
int-enum = "1.0.1"
itertools = "0.13.0"
logos = "0.14.1"
string-interner = "0.17.0"
thiserror = "1.0.58"

[dev-dependencies]
rstest = "0.21.0"
insta = "1.39.0"
mockall = "0.12.1"


[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
